2016-03-04  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR2826: Provide option to disable SystemTap tests
	* INSTALL: Document --disable-systemtap-tests.
	* Makefile.am:
	(SYSTEMTAP_TEST_SUITE): Define if SystemTap tests
	are enabled.
	(check-local): Use SYSTEMTAP_TEST_SUITE in place
	of check-tapset.
	(.PHONY): Add check-jdk, check-hotspot, check-langtools,
	jtregcheck, check-tapset, check-tapset-probes and
	check-tapset-jstack
	* NEWS: Updated.
	* acinclude.m4:
	(IT_DISABLE_SYSTEMTAP_TESTS): Add option to
	disable SystemTap tests.
	* configure.ac:
	Call IT_DISABLE_SYSTEMTAP_TESTS.

2016-03-04  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR2865: Handle uninstallation.
	* Makefile.am:
	(uninstall-local): Implemented. Deletes files
	installed by install-exec-local and install-data-local,
	then removes directories created by those targets.
	* NEWS: Updated.
	* acinclude.m4:
	(IT_CHECK_FOR_RMDIR): Check that rmdir is installed
	and see if it supports the --ignore-fail-on-empty option.
	* configure.ac:
	Invoke IT_CHECK_FOR_RMDIR.

2014-06-11  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR1741: Break PulseAudio provider out into IcedTea-Sound
	* patches/pulse-soundproperties.patch,
	* pulseaudio/COPYING,
	* pulseaudio/README,
	* pulseaudio/src/java/META-INF/services/javax.sound.sampled.spi.MixerProvider,
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/ContextEvent.java,
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/ContextListener.java,
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/Debug.java,
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/EventLoop.java,
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/Operation.java,
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioClip.java,
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioDataLine.java,
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioLine.java,